[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://environments/hell_1.tres" type="Environment" id=2]
[ext_resource path="res://scenes/weapons/blaster.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/PlayerHand.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/projectiles/BlasterRound.tscn" type="PackedScene" id=6]
[ext_resource path="res://raw_assets/audio/Blaster Fire 1/Blaster Fire 1 Mixdown.wav" type="AudioStream" id=7]
[ext_resource path="res://raw_assets/audio/Jump1.mp3" type="AudioStream" id=8]

[sub_resource type="CapsuleShape" id=16]

[sub_resource type="BoxShape" id=17]

[node name="Player" type="KinematicBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
Projectile = ExtResource( 6 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.18557e-08, -0.6, 0, 0.5, -2.62268e-08, 0, 1, 0 )
shape = SubResource( 16 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 0.48, 0, 2.04358e-08, 0, 0.12, 0, -2.04358e-08, 0, 0.48, 0, 0.00693807, 0 )
shape = SubResource( 17 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62369, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0901411, 0 )
cull_mask = 1048573
environment = ExtResource( 2 )
fov = 90.0

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 1, 0.080489, -0.399643, -0.198 )
script = ExtResource( 4 )
sway_left = Vector3( 0, 0.5, 0 )
sway_right = Vector3( 0, -0.5, 0 )

[node name="Weapon" type="Spatial" parent="Head/Hand"]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0.0219824, 0.0843769, -0.078637 )

[node name="blasterN" parent="Head/Hand/Weapon" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, 0 )

[node name="WeaponViewportContainer" type="ViewportContainer" parent="Head"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 120.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="WeaponViewport" type="Viewport" parent="Head/WeaponViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
msaa = 1
render_target_update_mode = 3

[node name="WeaponCam" type="Camera" parent="Head/WeaponViewportContainer/WeaponViewport"]
cull_mask = 2
environment = ExtResource( 2 )
fov = 90.0

[node name="WeaponMuzzle" type="Spatial" parent="Head"]
transform = Transform( 0.999808, 0, 0.0195988, 0, 1, 0, -0.0195988, 0, 0.999808, 0.0390114, -0.140454, -0.6141 )

[node name="WeaponFire" type="AudioStreamPlayer3D" parent="Head/WeaponMuzzle"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
stream = ExtResource( 7 )
max_distance = 50.0

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.55778, 0 )
layers = 3

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0

[connection signal="ammo_changed" from="." to="HUD" method="on_ammo_changed"]
[connection signal="health_changed" from="." to="HUD" method="on_health_changed"]
